<resources>
    <string name="app_name">Tripoli L2 \n Quiz</string>
    <string name="version">0.3.1</string>
    <!-- MAin screen -->
    <string name="start_quiz">Start Quiz</string>
    <string name="butClosemain">Exit</string>
    <!-- Buttons -->
    <string name="close">Close</string>

    <!-- Config-->
    <string name="save_config">Save</string>
    <string name="dismiss_app_config">Dismiss</string>
    <string name="application_language_config">Application language</string>
    <string name="questions_language">Questions Language</string>
    <string name="default_config">Default</string>
    <string name="font_size">Font Size</string>
    <!-- About-->
    <string name="butClose">Close</string>
    <string name="AboutText">This application is \n copyright (c) Boris du Reau \n Tripoli Southern France.</string>
    <string name="AboutText2">All questions are \n copyright (c) Tripoli Rocketry.</string>
    <string name="questions">Question:</string>


    <!-- Menu -->
    <string name="menu_restart">Restart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>


</resources>
