<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="com.tripolil2test.AppConfigActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_language_config"
        android:id="@+id/txtViewAppLang"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLanguage"
        android:focusableInTouchMode="false"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spinnerFontSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_language"
        android:id="@+id/txtQuestionLang"
        android:layout_below="@+id/spinnerLanguage"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerQuestLanguage"

        android:layout_alignTop="@+id/txtQuestionLang"
        android:layout_alignStart="@+id/spinnerLanguage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_size"
        android:id="@+id/txtViewFontSize"
        android:layout_below="@+id/txtQuestionLang"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="71dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerFontSize"
        android:layout_alignTop="@+id/txtViewFontSize"
        android:layout_alignLeft="@+id/butDefault"
        android:layout_alignStart="@+id/butDefault"
        android:layout_alignRight="@+id/butDefault"
        android:layout_alignEnd="@+id/butDefault"
        android:layout_alignBottom="@+id/txtViewFontSize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_config"
        android:id="@+id/butSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_app_config"
        android:id="@+id/butDismiss"
        android:layout_alignTop="@+id/butSave"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_config"
        android:id="@+id/butDefault"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
